--- a/app/src/main/res/layout/fragment_shop_item.xml
+++ b/app/src/main/res/layout/fragment_shop_item.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.shoppinglist.presentation.ShopItemViewModel"
+            type="com.example.shoppinglist.presentation.viewmodels.ShopItemViewModel"
             />
     </data>
 
