--- a/app/src/main/res/layout/fragment_shop_item.xml
+++ b/app/src/main/res/layout/fragment_shop_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -10,13 +12,10 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.ShopItemFragment"
-        >
+        android:background="#F8C346"
+        tools:context=".presentation.ShopItemFragment">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_name"
@@ -25,13 +24,13 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
+            app:boxBackgroundColor="#039BE5"
             app:errorInputName="@{viewModel.errorInputName}"
             app:layout_constraintBottom_toTopOf="@id/til_count"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            >
+            app:layout_constraintVertical_chainStyle="packed">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_name"
@@ -39,8 +38,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/name_hint"
                 android:inputType="textCapWords"
-                android:text="@{viewModel.shopItem.name}"
-                />
+                android:text="@{viewModel.shopItem.name}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -50,12 +48,12 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
+            app:boxBackgroundColor="#039BE5"
             app:errorInputCount="@{viewModel.errorInputCount}"
             app:layout_constraintBottom_toTopOf="@+id/save_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/til_name"
-            >
+            app:layout_constraintTop_toBottomOf="@+id/til_name">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_count"
@@ -63,18 +61,17 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/count_hint"
                 android:inputType="number"
-                android:text="@{String.valueOf(viewModel.shopItem.count)}"
-                />
+                android:text="@{String.valueOf(viewModel.shopItem.count)}" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/save_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:backgroundTint="#1E88E5"
             android:text="@string/save_btn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
