--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:background="#F8C346"
+        android:background="@drawable/backgroundcolor"
         android:layout_height="match_parent"
         tools:context=".presentation.MainActivity"
         >
