--- a/app/src/main/res/layout/item_shop_enabled.xml
+++ b/app/src/main/res/layout/item_shop_enabled.xml
@@ -25,7 +25,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#2DA8EA"
+            android:background="@drawable/itemcolors"
             android:orientation="horizontal"
             android:padding="16dp">
 
