--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,20 +5,38 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:background="@drawable/backgroundcolor"
+        android:background="#4B00ACC1"
         android:layout_height="match_parent"
         tools:context=".presentation.MainActivity"
         >
 
+        <TextView
+            android:id="@+id/title_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/arial_rouded_mt_bold"
+            android:paddingStart="12dp"
+            android:paddingTop="20dp"
+            android:text="@string/title_text"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
+            android:paddingTop="15dp"
             android:id="@+id/rv_shop_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:paddingBottom="15dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title_text"
             tools:listitem="@layout/item_shop_enabled"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
