--- a/app/src/main/res/layout/item_shop_disabled.xml
+++ b/app/src/main/res/layout/item_shop_disabled.xml
@@ -17,6 +17,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginVertical="5dp"
         android:layout_marginBottom="4dp"
         app:cardCornerRadius="4dp"
         app:cardElevation="1dp"
