--- a/app/src/main/res/layout/item_shop_enabled.xml
+++ b/app/src/main/res/layout/item_shop_enabled.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginVertical="5dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
